import "public_key.proto";

message Cert {
    enum Version {
        _0_0_1 = 0;
    }
    required Version version = 1;
    oneof KeyType {
        RSAPublicKey public_key = 2;
    }

}